# bnb-bid-ask-auto

./: .env.example  .gitignore  AUDIT.md  AUDIT_V4.md  DESKTOP.md  README.md  V4_FEES_PLAN.md  check_pool.py  check_v3_pool.py  compare_encoding.py  config.py  decode_tx.py  find_pool_params.py  license.lic  main.py  pyproject.toml  requirements.txt  run_ui.py
debug/: check_approvals.py  check_v3_pool_pcs.py
license-server/: .env.example  .gitignore  config.py  deploy.sh  keygen.py  main.py  models.py  requirements.txt  setup_ssl.sh
licensing/: __init__.py  license_checker.py
src/: __init__.py  codex_api.py  crypto.py  dex_swap.py  kyberswap.py  liquidity_provider.py  okx_dex.py  receipt_parser.py  utils.py  v4_liquidity_provider.py
src/contracts/: __init__.py  abis.py  pool_factory.py  position_manager.py
src/contracts/v4/: __init__.py  abis.py  constants.py  pool_manager.py  position_manager.py  subgraph.py
src/math/: __init__.py  apr.py  distribution.py  liquidity.py  ticks.py
src/multicall/: __init__.py  batcher.py
src/storage/: pnl_store.py
tests/: conftest.py  test_bugfixes_feb12.py  test_config.py  test_crypto.py  test_dashboard.py  test_dex_swap.py  test_distribution.py  test_integration.py  test_liquidity.py  test_math.py  test_multicall_batcher.py  test_pool_factory.py  test_pool_manager_v4.py  test_position_manager_v3.py  test_position_manager_v4.py  test_subgraph.py  test_ticks.py  test_utils.py  test_v3_provider.py  test_v4_constants.py  test_v4_provider.py  test_v4_provider_extended.py
ui/: __init__.py  advanced_tab.py  calculator_tab.py  create_tab.py  dashboard_tab.py  main_window.py  manage_tab.py  password_dialog.py  settings_dialog.py  swap_preview_dialog.py
ui/styles/: dark_theme.qss
ui/widgets/: __init__.py  position_table.py  price_chart.py
