[project]
name = "bnb-liquidity-ladder"
version = "1.0.0"
description = "Bid-ask liquidity ladder tool for Uniswap/PancakeSwap V3/V4"
requires-python = ">=3.10,<3.14"
dependencies = [
    "web3>=6.0.0",
    "eth-account>=0.9.0",
    "eth-abi>=4.0.0",
    "python-dotenv>=1.0.0",
    "PyQt6>=6.4.0",
    "cryptography>=3.4",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "ui", "licensing"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
